Product admin side

--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -19,10 +19,13 @@
 
                 <% if(admin) { %>
                 <li class="nav-item">
-                    <a class="nav-link" href="/registerLinestander">Admin LS page</a>
+                    <a class="nav-link" href="/registerLinestander">Admin LS</a>
                 </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/adminUser">Admin user page</a>
+                        <a class="nav-link" href="/adminUser">Admin user</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/adminProducts">Admin products</a>
                     </li>
                 <% } %>
 
