--- a/views/lineItems.ejs
+++ b/views/lineItems.ejs
@@ -30,6 +30,14 @@
 
             <br>
 
+            <br>
+                <div class="post-preview">
+                    <h4 class="post-subtitle">
+                        Delivery fee: <%= deliveryFee%>,-
+                    </h4>
+                </div>
+
+
             <div class="clearfix">
                 <a class="btn btn-primary float-right" href="/order">Order</a>
                 <h2 class="post-title" style="float: right; margin-right: 10px">
