--- a/views/registerLinestander.ejs
+++ b/views/registerLinestander.ejs
@@ -27,13 +27,11 @@
            <hr>
            <div> <b>Username:</b> <%= users[i].username %> </div>
            <br>
-           <div> <b>Full name:</b> <%= users[i].full_Name %> </div>
-           <div> <b>Full name:</b> <%= users[i].full_name.first_name %> </div>
+           <div> <b>Full name:</b> <%= users[i].full_name.first_name + ' ' + users[i].full_name.last_name %> </div>
            <br>
-           <div> <b>Email:</b> <%= users[i].lineStander.email %> </div>
+           <div> <b>Email:</b> <%= users[i].email %> </div>
            <br>
-           <div> <b>phoneNumber:</b> <%= users[i].phone_number %> </div>
-           <div> <b>phoneNumber:</b> <%= users[i].phoneNumber %> </div>
+           <div> <b>Phone number:</b> <%= users[i].phone_number %> </div>
            <br>
            <div> <b>ID:</b>  <%= users[i]._id %></div>
 
