--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -42,6 +42,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/logout">Log out</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/orderHistory/<%= loggedIn%>">Order history</a>
+                    </li>
                 <% } %>
 
                 <% if(LSCheck) { %>
