--- a/views/adminProducts.ejs
+++ b/views/adminProducts.ejs
@@ -11,7 +11,7 @@
     Admin can delete and update products
 </h1>
 
-<section class="getProducts">
+<section class="get">
     <h3> GET data for Products</h3>
     <div>
         <% for(var i = 0; i < products.length; i++) { %>
