Skrevet lidt kommentarer rundt omkring + ændret order-siden, så man nu kan vælge at bestille med sin allerede oprettede billing address + ændret til camelCase de fleste steder #teamCamelCaseFTW

--- a/views/adminUser.ejs
+++ b/views/adminUser.ejs
@@ -19,11 +19,11 @@
                 <hr>
                 <div> <b>Username:</b> <%= customer[i].username %> </div>
                 <br>
-                <div> <b>First name:</b> <%= customer[i].full_name.first_name %> </div>
+                <div> <b>Full name:</b> <%= customer[i].fullName.firstName + " "%> <%= customer[i].fullName.lastName %> </div>
                 <br>
                 <div> <b>Email:</b> <%= customer[i].email %> </div>
                 <br>
-                <div> <b>Phone number:</b> <%= customer[i].phone_number %> </div>
+                <div> <b>Phone number:</b> <%= customer[i].phoneNumber %> </div>
                 <br>
                 <div> <b>ID:</b> <%= customer[i]._id %></div>
 
