--- a/views/layouts/admin.ejs
+++ b/views/layouts/admin.ejs
@@ -12,8 +12,13 @@
         </div>
         <br>
         <div class="input">
-            <label for="updateName"> Full name </label>
-            <input type="text" id="updateName" placeholder="Full Name">
+            <label for="updateName"> First name </label>
+            <input type="text" id="updateName" placeholder="First Name">
+        </div>
+        <br>
+        <div class="input">
+        <label for="haha"> Last name </label>
+        <input type="text" id="updateName2" placeholder="Last Name">
         </div>
         <br>
         <div class="input">
