--- a/views/registerLinestander.ejs
+++ b/views/registerLinestander.ejs
@@ -27,11 +27,11 @@
            <hr>
            <div> <b>Username:</b> <%= users[i].username %> </div>
            <br>
-           <div> <b>First name:</b> <%= users[i].full_name.first_name %> </div>
+           <div> <b>Full name:</b> <%= users[i].fullName.firstName + " "%><%= users[i].fullName.lastName %> </div>
            <br>
            <div> <b>Email:</b> <%= users[i].email %> </div>
            <br>
-           <div> <b>Phone number:</b> <%= users[i].phone_number %> </div>
+           <div> <b>Phone number:</b> <%= users[i].phoneNumber %> </div>
            <br>
            <div> <b>ID:</b>  <%= users[i]._id %></div>
 
