--- a/views/layouts/form.ejs
+++ b/views/layouts/form.ejs
@@ -2,8 +2,8 @@
     <p>Please fill in this form to create an account.</p>
     <div class="control-group">
         <div class="form-group floating-label-form-group controls">
-            <label for="username_customer"><b>Username</b></label>
-            <input type="text" placeholder="Username" id="username_customer" name="username_customer">
+            <label for="usernameCustomer"><b>Username</b></label>
+            <input type="text" placeholder="Username" id="usernameCustomer" name="username">
         </div>
     </div>
     <br>
@@ -16,16 +16,16 @@
     <br>
     <div class="control-group">
         <div class="form-group floating-label-form-group control">
-            <label for="first_name"><b>First Name</b></label>
-            <input type="text" placeholder="First name" id="first_name" name="first_name">
+            <label for="firstName"><b>First Name</b></label>
+            <input type="text" placeholder="First name" id="firstName" name="firstName">
         </div>
     </div>
     <br>
 
     <div class="control-group">
         <div class="form-group floating-label-form-group control">
-            <label for="last_name"><b>lastname</b></label>
-            <input type="text" placeholder="last name" id="last_name" name="last_name">
+            <label for="lastName"><b>lastname</b></label>
+            <input type="text" placeholder="last name" id="lastName" name="lastName">
         </div>
     </div>
     <br>
@@ -39,8 +39,8 @@
     <br>
     <div class="control-group">
         <div class="form-group floating-label-form-group control">
-            <label for="phone_number"><b>Phone Number</b></label>
-            <input type="text" placeholder="Phonenumber" id="phone_number" name="phone_number">
+            <label for="phoneNumber"><b>Phone Number</b></label>
+            <input type="text" placeholder="Phonenumber" id="phoneNumber" name="phoneNumber">
         </div>
     </div>
     <br>
@@ -55,7 +55,7 @@
     <div class="control-group">
         <div class="form-group floating-label-form-group control">
             <label for="streetNumber"><b>  Street number</b></label>
-            <input type="number" placeholder="street number" id="streetNumber" name="streetNumber">
+            <input type="number" placeholder="street number" id="streetNumber" name="streetNr">
         </div>
     </div>
     <br>
@@ -63,23 +63,23 @@
     <div class="control-group">
         <div class="form-group floating-label-form-group control">
             <label for="zipCode"><b>zip code</b></label>
-            <input type="text" placeholder="zip-code" id="zipCode" name="zipCode">
+            <input type="text" placeholder="Zip Code" id="zipCode" name="zipCode">
         </div>
     </div>
 
     <br>
     <div class="control-group">
         <div class="form-group floating-label-form-group control">
-            <label for="cityName"><b>City name</b></label>
-            <input type="text" placeholder="enter your city" id="cityName" name="cityName">
+            <label for="city"><b>City name</b></label>
+            <input type="text" placeholder="enter your city" id="city" name="city">
         </div>
     </div>
     <br>
 
     <div class="control-group">
         <div class="form-group floating-label-form-group control">
-            <label for="countryName"><b>Country</b></label>
-            <input type="text" placeholder="country" id="countryName" name="countryName">
+            <label for="country"><b>Country</b></label>
+            <input type="text" placeholder="country" id="country" name="country">
         </div>
     </div>
     <br>
