Små justeringer af modellerne for at stemme overens med diverse diagrammer

--- a/views/adminUser.ejs
+++ b/views/adminUser.ejs
@@ -19,7 +19,7 @@
                 <hr>
                 <div> <b>Username:</b> <%= customer[i].username %> </div>
                 <br>
-                <div> <b>Full name:</b> <%= customer[i].fullName.firstName + " "%> <%= customer[i].fullName.lastName %> </div>
+                <div> <b>Full name:</b> <%= customer[i].fullName %> </div>
                 <br>
                 <div> <b>Email:</b> <%= customer[i].email %> </div>
                 <br>
