--- a/views/layouts/admin.ejs
+++ b/views/layouts/admin.ejs
@@ -12,13 +12,8 @@
         </div>
         <br>
         <div class="input">
-            <label for="updateName"> First name </label>
-            <input type="text" id="updateName" placeholder="First Name">
-        </div>
-        <br>
-        <div class="input">
-        <label for="haha"> Last name </label>
-        <input type="text" id="updateName2" placeholder="Last Name">
+            <label for="updateName"> Full name </label>
+            <input type="text" id="updateName" placeholder="Full Name">
         </div>
         <br>
         <div class="input">
