--- a/views/layouts/form.ejs
+++ b/views/layouts/form.ejs
@@ -16,16 +16,8 @@
     <br>
     <div class="control-group">
         <div class="form-group floating-label-form-group control">
-            <label for="firstName"><b>First Name</b></label>
-            <input type="text" placeholder="First name" id="firstName" name="firstName">
-        </div>
-    </div>
-    <br>
-
-    <div class="control-group">
-        <div class="form-group floating-label-form-group control">
-            <label for="lastName"><b>lastname</b></label>
-            <input type="text" placeholder="last name" id="lastName" name="lastName">
+            <label for="fullName"><b>Full Name</b></label>
+            <input type="text" placeholder="Full Name" id="fullName" name="fullName">
         </div>
     </div>
     <br>
@@ -55,7 +47,7 @@
     <div class="control-group">
         <div class="form-group floating-label-form-group control">
             <label for="streetNumber"><b>  Street number</b></label>
-            <input type="number" placeholder="street number" id="streetNumber" name="streetNr">
+            <input type="text" placeholder="street number" id="streetNumber" name="streetNr">
         </div>
     </div>
     <br>
