--- a/views/registerLinestander.ejs
+++ b/views/registerLinestander.ejs
@@ -27,7 +27,7 @@
            <hr>
            <div> <b>Username:</b> <%= users[i].username %> </div>
            <br>
-           <div> <b>Full name:</b> <%= users[i].fullName.firstName + " "%><%= users[i].fullName.lastName %> </div>
+           <div> <b>Full name:</b> <%= users[i].fullName%> </div>
            <br>
            <div> <b>Email:</b> <%= users[i].email %> </div>
            <br>
