--- a/views/addressChange.ejs
+++ b/views/addressChange.ejs
@@ -17,7 +17,7 @@
             <input type="text" placeholder="Enter the name of your street" id="streetName" name="streetName">
             <br>
             <label for="streetNr"><b>Street number:</b></label>
-            <input type="number" placeholder="Enter your street number" id="streetNr" name="streetNr">
+            <input type="text" placeholder="Enter your street number" id="streetNr" name="streetNr">
             <br>
             <label for="zipCode"><b>ZIP code:</b></label>
             <input type="number" placeholder="Enter your ZIP code" id="zipCode" name="zipCode">
