--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -55,6 +55,16 @@
                         <a class="nav-link" href="/logout">Log out</a>
                     </li>
                 <% } %>
+
+                <% if(loggedIn) { %>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/accountSettings">Account Settings</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout">Log out</a>
+                    </li>
+                <% } %>
+
             </ul>
         </div>
     </div>
