Update account settings - delete LS removed in EJS

--- a/views/accountSettings.ejs
+++ b/views/accountSettings.ejs
@@ -8,7 +8,7 @@
 <%- include('layouts/scripts');-%>
 
 <h1>
-    User account settings
+    User Account Settings
 </h1>
 
 <!-- Values that the user are allowed to modify -->
