--- a/views/layouts/admin.ejs
+++ b/views/layouts/admin.ejs
@@ -30,6 +30,7 @@
     </form>
 </section>
 
+<% if(admin) { %>
 <section class="delete">
     <h3>DELETE</h3>
     <form id="deleteUser">
@@ -44,3 +45,4 @@
         <button type="submit"> Delete LineStander</button>
     </form>
 </section>
+<% } %>
