Update account settings - removed logout in nav bar, which was showing twice. Also edited some text in Account Settings.

--- a/views/accountSettings.ejs
+++ b/views/accountSettings.ejs
@@ -10,10 +10,14 @@
 <h1>
     User Account Settings
 </h1>
+<h3><i>
+    Change your account settings below by copying your ID into UPDATE data table. Type your new data and click update.
+    </i>
+</h3>
 
 <!-- Values that the user are allowed to modify -->
 <section class="get">
-    <h3> GET data</h3>
+    <h3> Your current data</h3>
     <div>
         <% for(var i = 0; i < customer.length; i++) { %>
             <article class="data">
