getAdminUser.js er ændret så der ikke er en executer + kiggede lidt på fejlmeddelelser osv.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -116,3 +116,8 @@ ul li a:hover {
     color: orangered;
     font-weight: bold;
 }
+
+.errorMessages {
+    background: #e74c3c;
+    list-style-type: circle;
+}
