--- a/views/layouts/form.ejs
+++ b/views/layouts/form.ejs
@@ -1,5 +1,6 @@
 <div class="container">
-    <p>Please fill in this form to create an account.</p>
+    <h3>Please fill in this form to create an account.</h3>
+    <br>
     <div class="control-group">
         <div class="form-group floating-label-form-group controls">
             <label for="usernameCustomer"><b>Username</b></label>
