--- a/views/lineStander.ejs
+++ b/views/lineStander.ejs
@@ -24,11 +24,10 @@
                 <div>
                     <h3>Order:</h3>
                 <% for(var u = 0; u < arr.length; u++) { %>
-                        <br>
-                        <div> <b>Product:</b> <%= arr[u].product.productName %> <br>
-                            <b>Quantity:</b> <%= arr[u].qty %>
-                        </div>
-                        <br>
+                    <div> <b>Product:</b> <%= arr[u].product.productName %> <br>
+                        <b>Quantity:</b> <%= arr[u].qty %>
+                    </div>
+                    <br>
                 </div>
 
 
@@ -47,7 +46,7 @@
     <div>
         <% for(var i1 = 0; i1 < pickedUpOrders.length; i1++) { %>
             <article class="data">
-                <div> <h3>Order id:</h3> <p id="orderIdAfterPickUp"> <%= pickedUpOrders[i1]._id %> </p> </div>
+                <div> <h3>Order id:</h3> <p class="orderIdAfterPickUp"> <%= pickedUpOrders[i1]._id %> </p> </div>
                 <br>
                 <div> <h3>Ordered by:</h3> <%= pickedUpOrders[i1].orderedBy %> </div>
                 <br>
@@ -62,7 +61,6 @@
                 <div>
                     <h3>Order:</h3>
                     <% for(var u1 = 0; u1 < arr1.length; u1++) { %>
-                        <br>
                         <div> <b>Product:</b> <%= arr1[u1].product.productName %> <br>
                             <b>Quantity:</b> <%= arr1[u1].qty %></div>
                         <br>
@@ -70,7 +68,7 @@
 
             </article>
             <% } %>
-            <button type="button" id="deliveredButton">Confirm completed delivery</button>
+            <button type="button" name="deliveredButton">Confirm completed delivery</button>
             <br>
             <br>
         <% } %>
@@ -93,7 +91,6 @@
                 <div>
                     <h3>Order:</h3>
                     <% for(var u2 = 0; u2 < arr2.length; u2++) { %>
-                        <br>
                         <div> <b>Product:</b> <%= arr2[u2].product.productName %> <br>
                             <b>Quantity:</b> <%= arr2[u2].qty %></div>
                         <br>
