--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,7 +4,7 @@
 <%- include('layouts/header.ejs');-%>
 <body>
 <%- include('layouts/navbar.ejs');-%>
-<h1>Log ind for at benytte vores produkter</h1>
+<h1>Log ind to buy our products</h1>
 
 <form action="/users/login" method="POST" enctype="application/x-www-form-urlencoded" >
 
