--- a/views/lineItems.ejs
+++ b/views/lineItems.ejs
@@ -11,6 +11,8 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
+            <!-- We use the array of products to loop through and show the details of the different
+            chosen items from session.lineItems -->
             <% for(var i = 0; i < products.length; i++) { %>
                 <div class="post-preview">
                     <h1 class="post-title">
