--- a/views/addressChange.ejs
+++ b/views/addressChange.ejs
@@ -9,6 +9,8 @@
 <h2>
     Please type in your new billing address
 </h2>
+<!-- This form is created to be able to change your billing address.
+The addressId for the logged in user is shown under the variable user from addressGET.js. -->
 <form id="changeBillingAddress">
     <div class="control-group">
         <div class="form-group floating-label-form-group control">
