--- a/views/adminUser.ejs
+++ b/views/adminUser.ejs
@@ -10,7 +10,7 @@
 <h1>
     Admin can delete and update user
 </h1>
-
+<!-- We loop through all the customers to shown them -->
 <section class="get">
     <h3> GET data</h3>
     <div>
