--- a/views/layouts/form.ejs
+++ b/views/layouts/form.ejs
@@ -1,3 +1,4 @@
+<!-- The new user form, used in register and registerLineStander -->
 <div class="container">
     <h3>Please fill in this form to create an account.</h3>
     <br>
