--- a/views/registerLinestander.ejs
+++ b/views/registerLinestander.ejs
@@ -18,7 +18,7 @@
         <hr>
 
 </form>
-
+<!-- Loop through all the users with the userType linestander. This is saved in the variable users from getRegisterLinestander.js  -->
 <section class="get">
     <h3> GET data for LineStander</h3>
     <div>
