--- a/views/lineStander.ejs
+++ b/views/lineStander.ejs
@@ -8,8 +8,8 @@
 <section class="get">
     <h2> Orders available for pick-up</h2>
     <div>
+        <!-- We make a loop through all the orders that has the status of "pending" -->
         <% for(var i = 0; i < availableOrders.length; i++) { %>
-
             <article class="data">
                 <div> <h3>Order id:</h3> <p class="orderName"> <%= availableOrders[i]._id %> </p> </div>
                 <br>
